# mcp-diagram-maker

./: LICENSE  README.md  pyproject.toml
src/mcp_diagram_maker/: server.py
