[project]
name = "mcp-diagram-maker"
version = "0.1.0"
description = "様々な種類の図やグラフを作成するためのMCPサーバー"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaleido>=1.1.0",
    "matplotlib>=3.10.6",
    "mcp[cli]",
    "pandas>=2.3.2",
    "plantweb>=1.3.0",
    "plotly>=6.3.0",
    "pytest>=8.4.2",
    "six>=1.17.0",
    "vl-convert-python>=1.8.0",
]


[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[project.scripts]
mcp-diagram-maker = "mcp_diagram_maker:main"
